@@ -1174,6 +1174,8 @@
 2021,0,500,0,0,10000:20000:30000:40000:50000,0
 //-- GC_CROSSIMPACT
 2022,0,500,0,2000,0,0
+//-- GC_DARKILLUSION
+2023,0,1500,0,0,0,0
 //-- GC_ANTIDOTE
 2026,0,0,0,0,0,0
 //-- GC_POISONINGWEAPON
@@ -1186,8 +1188,12 @@
 2030,0,1000,0,0,40000:80000:120000:160000:200000,0
 //-- GC_VENOMPRESSURE
 2031,0,0,1000,0,0,0
+//-- GC_POISONSMOKE
+2032,2000,1500,0,0,0,0
 //-- GC_CLOAKINGEXCEED
 2033,0,2500,0,0,0,0
+//-- GC_PHANTOMMENACE
+2034,0,1000,0,0,0,0
 //-- GC_HALLUCINATIONWALK
 2035,0,0,300000,0,30000,300000
 //-- GC_ROLLINGCUTTER
