@@ -95,6 +95,7 @@
 535,0xbd,    , -1, 0,  20,enemy, 0x010	//NJ_KAENSIN
 538,0xbb,    ,  1:1:1:2:2:2:3:3:3:4,0,-1,all,0x010	//NJ_SUITON
 670,0xc7,    ,  1, 4:7:10:13:16:19:22:25:28:31,1000,all,0x008	//NPC_EVILLAND
+2032,0xe1,   ,  2, 0,1000,enemy, 0x000	//GC_POISONSMOKE
 2044,0xca,   ,  0, 3,1000,all,   0x000	//AB_EPICLESIS
 2213,0x86,   ,  0,15,1000,enemy, 0x000	//WL_COMET
 2214,0x86,   ,  0, 5, 100,enemy, 0x080	//WL_CHAINLIGHTNING
